rename baseFiles to specificFiles implement globalFiles for un-specific stuff replace old static download uris

--- a/theme/brb/views/authentication/home.hbs
+++ b/theme/brb/views/authentication/home.hbs
@@ -34,7 +34,7 @@
 					<br>
 					<p>
 						<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/images/HPI_Schul_Cloud_Brandenburg_Schueler_2019.jpg" alt="Schüler sitzen zusammen und nutzen die Schul-Cloud Brandenburg auf ihren mobilen Endgeräten." />
-						Mehr Informationen: <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Beschreibung-der-HPI-Schul-Cloud.pdf" target="_blank" rel="noopener">Kurzbeschreibung "Die HPI Schul-Cloud" (.pdf)</a>
+						Mehr Informationen: <a href="{{theme.documents.globalFiles.BeschreibungDerSchulCloud}}" target="_blank" rel="noopener">Kurzbeschreibung "Die HPI Schul-Cloud" (.pdf)</a>
 					</p>
 
 					<h4>Niedrigschwelliger Zugang zu digitalen Unterrichtsinhalten</h4>
