--- a/theme/brb/views/lib/footer.hbs
+++ b/theme/brb/views/lib/footer.hbs
@@ -9,9 +9,9 @@
 				<span> - </span>
 				<a href="/datenschutz">Datenschutzerklärung: HPI</a>
 				<span> - </span>
-				<a href="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/Onlineeinwilligung/Datenschutzerklaerung-Muster-Schulen-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Datenschutzerklärung: Schulen</a>
+				<a href="{{theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung: Schulen</a>
 				<span> - </span>
-				<a href="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/Onlineeinwilligung/Nutzungsordnung-HPI-Schule-Schueler-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Nutzungsordnung</a>
+				<a href="{{theme.documents.specificFiles.termsOfUseExemplary}}" target="_blank" rel="noopener">Nutzungsordnung</a>
 				<span> - </span>
 				<a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a>
 			</div>
