--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -188,7 +188,7 @@
             <br/>
             <div class="embed-pdf">
                 <div class="row embed-pdf-row">
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Begleitmaterial/Broschuere_Die-Schul-Cloud-im-Unterricht-Fachuebergreifende-Unterrichtsszenarien-und-Methoden.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="{{theme.documents.globalFiles.BroschuereSCimUnterricht1}}">
                         <a href="#">
                             <div class="single-pdf-wrapper">
                                 <b class="single-pdf-title">Die HPI Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
@@ -198,7 +198,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Begleitmaterial/Broschuere_Die-Schul-Cloud-im-Unterricht-und-Schulalltag-Mehrwert-und-Voraussetzungen.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="{{theme.documents.globalFiles.BroschuereSCimUnterricht2}}">
                         <a href="#">
                             <div class="single-pdf-wrapper">
                                 <b class="single-pdf-title">Die HPI Schul-Cloud in Unterricht und Schulalltag - Mehrwert und Voraussetzungen</b>
@@ -207,7 +207,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://s3.hidrive.strato.com/schul-cloud-hpi/Willkommenordner/Begleitmaterial/Broschuere_HPI-Schul-Cloud-und-Lernen-4.0.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="{{theme.documents.globalFiles.BroschuereSCundLernen4}}">
                         <a href="#">
                             <div class="single-pdf-wrapper">
                                 <b class="single-pdf-title">HPI Schul-Cloud und Lernen 4.0 - Best-Practice-Unterrichtsbeispiele für die Sekundarstufe</b>
@@ -226,7 +226,7 @@
             <h2 class="h3 section-title center">Veröffentlichungen</h2>
             <div class="embed-pdf">
                 <div class="row embed-pdf-row">
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="{{theme.documents.globalFiles.TechnischerBericht2019}}">
                             <div class="single-pdf-wrapper">
                         <a href="#">
                                 <b class="single-pdf-title">Technischer Bericht: Die HPI Schul-Cloud: Roll-Out einer Cloud-Architektur für Schulen in Deutschland</b>
@@ -235,7 +235,7 @@
                         </a>
                             </div>
                     </div>
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Schulrechner-wandern-in-die-Cloud-2017.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="{{theme.documents.globalFiles.SchulrechnerInDieSC2017}}">
                             <div class="single-pdf-wrapper">
                         <a href="#">
                                 <b class="single-pdf-title">Schulrechner wandern in die Cloud – Was bedeutet das für die unterschiedlichen Stakeholder?</b>
@@ -244,7 +244,7 @@
                         </a>
                             </div>
                     </div>
-                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Konzept-und-Pilotierung-der-Schul-Cloud-2017.pdf">
+                    <div class="single-pdf col-xs-12 col-md-4" data-pdf="{{theme.documents.globalFiles.SCKonzeptPilotierung2017}}">
                             <div class="single-pdf-wrapper">
                         <a href="#">
                                 <b class="single-pdf-title">Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der HPI Schul-Cloud</b>
