--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -18,7 +18,7 @@
 				<ul>
 					<li><a href="/impressum">Impressum</a></li>
 					<li><a href="/datenschutz">Datenschutzerklärung: HPI</a>
-					<li><a href="{{@root.theme.documents.baseFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung: Muster Schulen</a>
+					<li><a href="{{@root.theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung: Muster Schulen</a>
 					</li>
 					<li><a href="/team">Team</a></li>
 					<li><a href="/partner">Partner</a></li>
