--- a/theme/n21/views/lib/footer.hbs
+++ b/theme/n21/views/lib/footer.hbs
@@ -6,7 +6,7 @@
 			<div>
 				<a href="/impressum">Impressum</a>
 				<span> - </span>
-				<a href="https://s3.hidrive.strato.com/schul-cloud-hpi/n21/Onlineeinwilligung/Datenschutzerklaerung-Muster-Schulen-Onlineeinwilligung.pdf" target="_blank" rel="noopener">Datenschutzerklärung</a>
+				<a href="{{theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung</a>
 			</div>
 		</div>
 	</div>
