SC-1902 Fix patch url

--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -46,7 +46,7 @@
 													<i class="fa fa-ellipsis-v"></i>
 													<i class="fa fa-ellipsis-v"></i>
 												</a>
-												<a class="btn-hidden-toggle" href="{{../_id}}" title="Thema verstecken">
+												<a class="btn-hidden-toggle" href="/courses/{{../courseId}}/topics/{{../_id}}" title="Thema verstecken">
 													<i class="fa fa-eye"></i>
 												</a>
 											{{/unless}}
