remove ! in einwilligungserklärung

--- a/views/registration/forms/einwilligungserklaerung.hbs
+++ b/views/registration/forms/einwilligungserklaerung.hbs
@@ -20,5 +20,5 @@
 
 <label>
     <input name="{{prefix}}termsOfUseConsent" type="checkbox" value="true" required/>
-    <span>!Ich habe die <a href="{{@root.theme.documents.specificFiles.termsOfUseExemplary}}" target="_blank" rel="noopener">Nutzungsordnung der {{@root.theme.title}}</a> gelesen und stimme ihr zu.</span>
+    <span>Ich habe die <a href="{{@root.theme.documents.specificFiles.termsOfUseExemplary}}" target="_blank" rel="noopener">Nutzungsordnung der {{@root.theme.title}}</a> gelesen und stimme ihr zu.</span>
 </label>
