--- a/views/lib/components/table.hbs
+++ b/views/lib/components/table.hbs
@@ -23,7 +23,7 @@
 
 
         {{#if body}}
-            <tbody>
+            <tbody data-testid="studentsNamesContainer">
                 {{#each body}}
                     <tr>
                         {{#each this}}
