course administration uses course edit page

--- a/views/administration/courses.hbs
+++ b/views/administration/courses.hbs
@@ -22,9 +22,9 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            <button type="submit" class="btn btn-primary btn-add-modal">
+                            <a href="/courses/add?redirectUrl=/administration/courses" class="btn btn-primary">
                                 Kurs hinzufügen
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
