--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -251,7 +251,7 @@
 
               <div class="pull-right">
                 <a class="btn btn-secondary" href="/courses/add">Einen weiteren Kurs anlegen</a>
-                <a class="btn btn-primary" href="/courses/">Zur Kursübersicht</a>
+                <a class="btn btn-primary" href="{{redirectUrl}}">Zur Kursübersicht</a>
               </div>
             </section>
 
