--- a/views/lib/piwik.hbs
+++ b/views/lib/piwik.hbs
@@ -1,22 +1,17 @@
+<!-- Matomo -->
 <script type="text/javascript">
-    var _paq = _paq || [];
-        {{#if currentUser}}
-        _paq.push(['setCustomDimension', customDimensionId = 1, customDimensionValue = '{{currentSchoolData.name}}']);
-        _paq.push(['setCustomDimension', customDimensionId = 4, customDimensionValue = '{{currentUser.roles.0.name}}']);
-        {{/if}}
-
-
-    _paq.push(['trackPageView']);
-
-    (function () {
-        var u = "//open.hpi.de/piwik/";
-        _paq.push(['setTrackerUrl', u + 'piwik.php']);
-        _paq.push(['setSiteId', '8']);
-        var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
-        g.type = 'text/javascript';
-        g.async = true;
-        g.defer = true;
-        g.src = u + 'piwik.js';
-        s.parentNode.insertBefore(g, s);
-    })();
+	var _paq = _paq || [];
+	{{#if currentUser}}
+		_paq.push(['setCustomDimension', customDimensionId = 1, customDimensionValue = '{{currentSchoolData.name}}']);
+		_paq.push(['setCustomDimension', customDimensionId = 4, customDimensionValue = '{{currentUser.roles.0.name}}']);
+	{{/if}}
+	_paq.push(['trackPageView']);
+	(function() {
+		var u="https://open.hpi.de/piwik/";
+		_paq.push(['setTrackerUrl', u+'matomo.php']);
+		_paq.push(['setSiteId', '8']);
+		var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+		g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+	})();
 </script>
+<!-- End Matomo Code -->
