--- a/theme/thr/style.scss
+++ b/theme/thr/style.scss
@@ -1,5 +1,9 @@
 $primaryColor: #185888;
+$primaryColorLight: #5284b8;
+$primaryColorDark: #002f5b;
 $secondaryColor: #f56b00;
+$secondaryColorLight: #ff9c3f;
+$secondaryColorDark: #bb3b00;
 $accentColor: #f56b00;
 
 $logoGradient: linear-gradient(45deg, $primaryColor 30%, $primaryColor);
@@ -7,3 +11,17 @@ $logoGradient: linear-gradient(45deg, $primaryColor 30%, $primaryColor);
 $logoBackground: url("../../images/logo/cloud-transparent-mono.svg") center / contain no-repeat;
 $logoBackgroundTablet: url("../../images/logo/cloud-transparent-mono-48-48.svg") center / contain no-repeat;
 $logoBackgroundLanding: url("../../images/logo/cloud-transparent-mono-long.svg") center / contain no-repeat;
+
+aside.nav-sidebar{
+    .sc-branding{
+        background-image: linear-gradient(to left, rgba(255, 255, 255, 0.25) ,rgba(255, 255, 255, 0));
+    }
+
+    ul li a:not(.sc-branding) {
+        color: $primaryColor;
+    }
+
+    ul li a:not(.sc-branding).active {
+        color: $primaryColorDark;
+    }
+}
