--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -46,7 +46,7 @@
 
             <div class="form-group">
                 <label>automatische Veröffentlichung vorplanen (optional)</label>
-                <input class="form-control" data-datetime data-min-date="0" data-testid="dateToBeDisplayed" name="displayAt" type="text" value="{{news.displayAt}}"/>
+                <input class="form-control" data-datetime data-min-date="0" id="news_date_to_be_displayed" data-testid="dateToBeDisplayed" name="displayAt" type="text" value="{{news.displayAt}}"/>
             </div>
 
             <div class="modal-footer">
