SC-1952 fix hidden topics

--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -89,7 +89,7 @@
 												<i class="fa fa-ellipsis-v"></i>
 												<i class="fa fa-ellipsis-v"></i>
 											</a>
-											<a class="btn-hidden-toggle" href="{{../_id}}"
+											<a class="btn-hidden-toggle" href="/courses/{{../courseId}}/topics/{{../_id}}"
 												title="Thema wieder anzeigen">
 												<i class="fa fa-eye-slash"></i>
 											</a>
