--- a/views/lib/components/notification.hbs
+++ b/views/lib/components/notification.hbs
@@ -2,5 +2,5 @@
     <button type="button" class="close" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
-    <div class="notification-content">{{notification.message}}</div>
+    <div class="notification-content" data-testid="notification">{{notification.message}}</div>
 </div>
