--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -68,7 +68,7 @@
 				</div>
 
                 <div class="form-group">
-                    <input type="submit" class="btn btn-primary"/>
+                    <input type="submit" class="btn btn-primary" id="submit_new_password_btn" data-testid="submitNewPassword"/>
                 </div>
             </form>
 
