timeline, avatar, color fix brb

--- a/theme/brb/style.scss
+++ b/theme/brb/style.scss
@@ -81,11 +81,13 @@ body {
 
 .timetable {
     .timeline {
-        &:before {
-            background: $secondaryColor;
-        }
-        span {
-            background: $secondaryColor;
+        .current-time {
+            &:before {
+                background: $secondaryColor;
+            }
+            span {
+                color: $secondaryColor;
+            }
         }
     }
 }
