rename piwik to matomo to be correct

--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -56,7 +56,7 @@
 <body class="{{#if inline}}window-inline{{/if}}">
     {{#block "body"}}{{/block}}
     {{#if production }}
-      {{#embed "lib/piwik"}}{{/embed}}
+      {{#embed "lib/matomo"}}{{/embed}}
     {{/if}}
 
 </body>
