--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -241,10 +241,12 @@
                     <p class="text-muted">
                       Lege die Inhalte deines Unterrichts an.
                     </p>
+                    <a class="btn btn-secondary" id="addclass-create-topic">Thema anlegen</a>
                     <h4 class="h6">Aufgaben stellen</h4>
                     <p class="text-muted">
                       Stelle deinen Kursteilnehmern Aufgaben und sieh dir ihre Abgaben an.
                     </p>
+                    <a class="btn btn-secondary" id="addclass-create-homework">Aufgabe stellen</a>
                   </div>
                 </div>
               </div>
