auto generate currentYear

--- a/theme/n21/views/lib/footer.hbs
+++ b/theme/n21/views/lib/footer.hbs
@@ -1,7 +1,7 @@
 <footer class="hide-inline small-footer">
 	<div class="imprint">
 		<div class="center">
-			<a>&copy; 2018 </a>
+			<a>&copy; {{currentYear}} </a>
 
 			<div>
 				<a href="/impressum">Impressum</a>
