--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -2,7 +2,7 @@
     <div class="imprint">
         <div class="center">
             <img src="/images/footer-logo.png" alt="Anbieterlogo"/>
-            <span>&copy; 2019 {{theme.short_title}} </span>
+            <span>&copy; {{currentYear}} {{theme.short_title}} </span>
 
             <div>
                 <a href="/impressum">Impressum</a>
