--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -55,6 +55,7 @@
                 </div>
                 {{/userHasPermission}}
 
+				{{#unless (userHasRole "student")}}
 				<div class="form-group">
 					<label>
 						<input type="checkbox" name="discoverable" value="true" {{#if isDiscoverable}}checked{{/if}}>
@@ -63,6 +64,8 @@
 						</p>
 					</label>
 				</div>
+				{{/unless}}
+
 
                 <div class="form-group">
                     <input type="submit" class="btn btn-primary"/>
