--- a/views/help/partials/help_nutzungshilfen.hbs
+++ b/views/help/partials/help_nutzungshilfen.hbs
@@ -1,4 +1,4 @@
-{{#ifCond isDemo "||" isStudent}}
+{{#if (userHasRole "student" "demoStudent" "demoTeacher")}}
 	{{#embed "help/icon-card" title="Nutzungshilfen" icon="fa-map-signs" class="quickHelp-card col-xs-12" id="nutzungshilfen"}}
 		{{#content "card-body"}}
 			{{> "help/icon-link-group" links=(jsonParse '[
@@ -47,5 +47,5 @@
 			]') link-class="col-sm-4"}}
 		{{/content}}
 	{{/embed}}
-{{/ifCond}}
+{{/if}}
 
