--- a/views/homework/edit.hbs
+++ b/views/homework/edit.hbs
@@ -31,7 +31,7 @@
                     }
                 }
             });
-            
+
             Mousetrap.bind(['command+s', 'ctrl+s'], function(e) {
                 document.getElementById('homework-form').submit();
                 return false;
@@ -61,7 +61,7 @@
                     $('#lessonPicker').empty().append('<option value="">Keine Themen in diesem Kurs</option>').prop('disabled', true).trigger("chosen:updated");
                 }
             });
-            
+
             $("#teamSubmissions").on("change",function(e,s){
                 if(document.getElementById("teamSubmissions").checked){
                     $("#teamsize").removeClass("hidden-xl-down");
@@ -82,7 +82,7 @@
                     {{/if}}
 
                     {{#if referrer}}<input name="referrer" type="hidden" data-force-value="true" value="{{referrer}}" />{{/if}}
-                    
+
                     <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
 
                     {{#unless isSubstitution}}
@@ -128,7 +128,7 @@
                         </div>
                     </div>
 
-                    {{#unless isStudent}}
+                    {{#unless (userHasRole "student")}}
                     <div class="form-group">
                         <div class="row">
                             <div class="col-md-6">
@@ -169,7 +169,7 @@
                         </div>
                     </div>
 
-                    {{#unless isStudent}}
+                    {{#unless (userHasRole "student")}}
                     <div class="form-group">
                         <label>
                             <input name="private" type="checkbox" value="private" {{#if assignment.private}}checked="checked"{{/if}}/>
