--- a/views/administration/dashboard.hbs
+++ b/views/administration/dashboard.hbs
@@ -16,7 +16,7 @@
                         {{#userHasPermission 'STUDENT_CREATE'}}
                             <div class="row card-deck-row">
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <div class="card h-100 teacher-option" onclick="location.href='/administration/students'">
+                                    <div class="card h-100 admin-card" onclick="location.href='/administration/students'">
                                         <div class="card-block homework">
                                             <div class="card-text">
                                                 <h2 class="h4"><i class="fa fa-odnoklassniki"></i> Schüler verwalten</h2>
@@ -26,7 +26,7 @@
                                 </div>
 
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <div class="card h-100 teacher-option" onclick="location.href='/administration/teachers/'">
+                                    <div class="card h-100 admin-card" onclick="location.href='/administration/teachers/'">
                                         <div class="card-block homework">
                                             <div class="card-text">
                                                 <h2 class="h4"><i class="fa fa-user"></i> Lehrer verwalten</h2>
@@ -37,7 +37,7 @@
 
                                 {{#userHasPermission 'ADMIN_VIEW'}}
                                     <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <div class="card h-100 teacher-option" onclick="location.href='/administration/courses/'">
+                                        <div class="card h-100 admin-card" onclick="location.href='/administration/courses/'">
                                             <div class="card-block homework">
                                                 <div class="card-text">
                                                     <h2 class="h4"><i class="fa fa-graduation-cap"></i> Kurse verwalten</h2>
@@ -47,7 +47,7 @@
                                     </div>
                                 {{/userHasPermission}}
                                     <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <div class="card h-100 teacher-option" onclick="location.href='/administration/classes/'">
+                                        <div class="card h-100 admin-card" onclick="location.href='/administration/classes/'">
                                             <div class="card-block homework">
                                                 <div class="card-text">
                                                     <h2 class="h4"><i class="fa fa-users"></i> Klassen verwalten</h2>
@@ -57,7 +57,7 @@
                                     </div>
                                 {{#userHasPermission 'ADMIN_VIEW'}}
                                     <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <div class="card h-100 teacher-option" onclick="location.href='/administration/teams/'">
+                                        <div class="card h-100 admin-card" onclick="location.href='/administration/teams/'">
                                             <div class="card-block homework">
                                                 <div class="card-text">
                                                     <h2 class="h4"><i class="fa fa-users"></i> Teams verwalten</h2>
@@ -66,10 +66,19 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <div class="card h-100 teacher-option" onclick="location.href='/administration/school/'">
+                                        <div class="card h-100 admin-card" onclick="location.href='/administration/school/'">
                                             <div class="card-block homework">
                                                 <div class="card-text">
                                                     <h2 class="h4"><i class="fa fa-building"></i> Schule verwalten</h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        <div class="card h-100 admin-card" onclick="location.href='/administration/datasources/'">
+                                            <div class="card-block homework">
+                                                <div class="card-text">
+                                                    <h2 class="h4"><i class="fa fa-database"></i> Datenquellen verwalten</h2>
                                                 </div>
                                             </div>
                                         </div>
