--- a/theme/open/views/lib/footer.hbs
+++ b/theme/open/views/lib/footer.hbs
@@ -7,7 +7,9 @@
 			<div>
 				<a href="/impressum">Impressum</a>
 				<span> - </span>
-				<a href="/datenschutz">Datenschutzerklärung</a>
+				<a href="/datenschutz">Datenschutzerklärung HPI</a>
+				<span> - </span>
+				<a href="{{@root.theme.documents.specificFiles.privacy}}" target="_blank" rel="noopener">Datenschutzerklärung Schule</a>
 				<span> - </span>
 				<a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a>
 			</div>
