updated delete course message alert

--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -299,7 +299,7 @@
 			{{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
 			{{#content "body"}}
 				<p class="m-1">
-					<b>Achtung:</b> Dies löscht den Kurs auch für alle Schüler:innen. <br />
+					<b class="alert-course-delete"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Achtung:</b> Dies löscht den Kurs auch für alle Schüler:innen. <br />
 					Alle Daten werden unwiederruflich gelöscht.
 				</p>
 				<div class="modal-footer">
