--- a/views/lib/sentry.hbs
+++ b/views/lib/sentry.hbs
@@ -3,33 +3,32 @@
 <script src="/vendor-optimized/@sentry/integrations/build/captureconsole.js"></script>
 <script>
 	function removeIds(url) {
-		var checkForHexRegExp = /^[a-f\d]{24}$/ig
+		var checkForHexRegExp = /^[a-f\d]{24}$/ig;
 		return url.replace(checkForHexRegExp, 'ID');
 	}
 	Sentry.init({
 		dsn: "{{@root.SENTRY_DSN}}",
-		environment: "{{@root.domain}}",
+		environment: "{{@root.env}}",
 		release: "{{@root.version}}",
 		integrations: [
 			new Sentry.Integrations.CaptureConsole()
 		],
-		beforeSend(event) {
+		{{!-- beforeSend(event) { // however this is not working
 			if (event.request && event.request.url) {
-				event.request.url = removeIds(event.request.url);
+				var cleanUrl = removeIds(event.request.url);
+				event.request.url = cleanUrl;
 			}
-		},
+		},  --}}
 	});
 	Sentry.configureScope((scope) => {
 		scope.setLevel('warn');
-		{ { #if @root.currentUser } }
+		{{#if @root.currentUser}}
 		scope.setTag({ "schoolId": "{{@root.currentUser.schoolId}}" });
-		{
-			{
-				/if}}
-				scope.setTag("frontend", true);
-				scope.setTag("theme", "{{@root.theme.short_title}}");
-				scope.setTag("sha", "{{@root.sha}}");
-				scope.setTag("env", "{{@root.env}}");
-			});
+		{{/if}}
+		scope.setTag("frontend", true);
+		scope.setTag("theme", "{{@root.theme.name}}");
+		scope.setTag("sha", "{{@root.sha}}");
+		scope.setTag("domain", "{{@root.domain}}");
+	});
 </script>
 {{/ifneq}}
