draft footer n21 but s3 files missing

--- a/theme/n21/views/lib/footer.hbs
+++ b/theme/n21/views/lib/footer.hbs
@@ -6,7 +6,9 @@
 			<div>
 				<a href="/impressum">Impressum</a>
 				<span> - </span>
-				<a href="{{theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung</a>
+				<a href="/datenschutz">Datenschutzerklärung NBC</a>
+				<span> - </span>
+				<a href="{{theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung Schule</a>
 			</div>
 		</div>
 	</div>
