--- a/theme/brb/views/lib/default.hbs
+++ b/theme/brb/views/lib/default.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+	{{#embed "lib/sentry"}}{{/embed}}
 	<title>{{#if title}}{{title}} - {{/if}}{{theme.title}}</title>
 	<!--
 		01001000 01010000 01001001  01010011 01100011 01101000 01110101 01101100 00101101 01000011 01101100 01101111 01110101 01100100
