--- a/theme/thr/views/authentication/home.hbs
+++ b/theme/thr/views/authentication/home.hbs
@@ -1,36 +1,47 @@
-{{#extend "lib/default"}} {{#content "styles" mode="append"}}
-<link rel="stylesheet" href="/styles/authentication/home.css" /> {{/content}} {{#content "scripts" mode="append"}}
-<script src="/scripts/login.js" type="text/javascript" defer></script>
-{{/content}} {{#content "body"}} {{#embed "lib/header" hideMenu=true}}{{/embed}}
-<div class="container">
-    <div class="row">
-        <main class="col-md-8">
-            <div class="hidden-md-up">
-                {{> "authentication/forms/login"}} {{> "authentication/forms/demo-login"}}
-            </div>
+{{#extend "lib/loggedout"}}
 
-            <section class="card">
-                <div class="card-block">
-                    <h4>Herzlich willkommen bei der Thüringer Schul-Cloud!</h4>
-                </div>
-            </section>
-        </main>
+{{#content "styles" mode="append"}}
+	<link rel="stylesheet" href="/styles/homepage/index.css" />
+	<link rel="stylesheet" href="/vendor/introjs/introjs.min.css" />
+{{/content}}
 
-		<aside class="col-md-4">
-            {{> "authentication/forms/login"}}
+{{#content "scripts" mode="append"}}
+	<script src="/vendor/introjs/intro.min.js" type="text/javascript" defer></script>
+	<script src="/scripts/login.js" type="text/javascript" defer></script>
 
-			<section id="partner" class="card">
-				<div class="card-block">
-					<h4 class="card-title">Projektdurchführung</h4>
-					<div class="card-text partner-img">
-						<a href="https://hpi.de/open-campus/hpi-initiativen/schul-cloud.html" target="_blank" rel="noopener">
-							<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid">
-						</a>
-					</div>
-				</div>
-			</section>
-        </aside>
-    </div>
-</div>
-{{#embed "lib/extended_footer"}}{{/embed}} {{#embed "lib/components/modal-form" action="/pwrecovery/" method="post" class="pwrecovery-modal"}}
-{{#content "fields"}} {{> "authentication/forms/pwrecovery"}} {{/content}} {{/embed}} {{/content}} {{/extend}}
+	<script type="text/javascript" src="/vendor/mailchimp.js" data-dojo-config="usePlainJson: true, isDebug: false" defer></script>
+{{/content}}
+
+{{#content "page"}}
+
+{{#embed "authentication/section"}}
+	{{#content "body"}}
+		<div class="rows-2">
+			<div>
+				<h1>
+					Herzlich willkommen bei der <span style="white-space: nowrap;">Thüringer Schulcloud</span>
+				</h1>
+				<p>Das <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt
+					unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/"
+						target="_blank">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von über 300 Schulen bundesweit und
+					unterstützt vom Bundesministerium für Bildung und Forschung die HPI Schul-Cloud. Sie soll die technische
+					Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und
+					Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
+			</div>
+
+			<div>
+				{{> "authentication/forms/login"}}
+			</div>
+		</div>
+	{{/content}}
+{{/embed}}
+
+{{#embed "lib/components/modal-form" action="/pwrecovery/" method="post" class="pwrecovery-modal"}}
+	{{#content "fields"}}
+		{{> "authentication/forms/pwrecovery"}}
+	{{/content}}
+{{/embed}}
+
+
+	{{/content}}
+{{/extend}}
