ux improvements and fixes

--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -237,13 +237,12 @@
                   <h2 class="h4">Geschafft!</h2>
                   <h3 class="h5 text-muted">Was kannst du in einem Kurs machen?</h3>
                   <div class="course-features">
-                    <a class="btn btn-secondary" id="addclass-create-topic">Thema anlegen</a>
+                    <a class="h6" id="addclass-create-topic" href="#">Themen anlegen</a>
                     <p class="text-muted">
                       Lege die Inhalte deines Unterrichts an.
                     </p>
                     
-                    <a class="btn btn-secondary" id="addclass-create-homework">Aufgabe stellen</a>
-                    
+                    <a class="h6" id="addclass-create-homework" href="#">Aufgaben stellen</a>
                     <p class="text-muted">
                       Stelle deinen Kursteilnehmern Aufgaben und sieh dir ihre Abgaben an.
                     </p>
