--- a/views/administration/classes-edit.hbs
+++ b/views/administration/classes-edit.hbs
@@ -12,7 +12,7 @@
 
     {{#content "page"}}
         <section class="section-classes-create">
-            <form class="create-form" method="post" action="">
+            <form class="create-form" method="post" action="{{action}}">
                 {{> "administration/forms/form-classes-edit"}}
             </form>
         </section>
