--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -10,7 +10,7 @@
 {{/ifeq}}
 
 {{#ifeq mode "upgrade"}}
-	<input name="schoolId" type="hidden" data-force-value="true" value="{{../class.predecessor}}" />
+	<input name="predecessor" type="hidden" data-force-value="true" value="{{../class.predecessor}}" />
 {{/ifeq}}
 
 <div class="form-group">
