by default not disabled

--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -111,7 +111,7 @@
 		<button class="btn btn-primary" type="submit" disabled>Änderungen speichern</button>
 	{{/ifeq}}
 	{{#ifeq mode "upgrade"}}
-		<button class="btn btn-primary" type="submit" disabled>Klasse in Schuljahr <span data-from="schoolyear"></span> versetzen</button>
+		<button class="btn btn-primary" type="submit">Klasse in Schuljahr <span data-from="schoolyear"></span> versetzen</button>
 	{{/ifeq}}
 </div>
 
