--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" data-testid="submit-Btn" name="submit-login" class="btn btn-block btn-primary btn-login" value="Anmelden" data-testid="submit-login" />
+                    <input type="submit" name="submit-login" class="btn btn-block btn-primary btn-login" value="Anmelden" />
                 </div>
             </form>
         </div>
