--- a/theme/n21/views/lib/footer.hbs
+++ b/theme/n21/views/lib/footer.hbs
@@ -8,7 +8,7 @@
 				<span> - </span>
 				<a href="/datenschutz">Datenschutzerklärung NBC</a>
 				<span> - </span>
-				<a href="{{theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung Schule</a>
+				<a href="{{theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung: Muster Schulen</a>
 			</div>
 		</div>
 	</div>
