--- a/theme/brb/views/lib/extended_footer.hbs
+++ b/theme/brb/views/lib/extended_footer.hbs
@@ -15,7 +15,7 @@
 				<ul>
 					<li><a href="/impressum">Impressum</a></li>
 					<li><a href="/datenschutz">Datenschutzerklärung: HPI</a></li>
-					<li><a href="{{theme.documents.specificFiles.privacy}}" target="_blank" rel="noopener">Datenschutzerklärung: Schulen</a></li>
+					<li><a href="{{theme.documents.specificFiles.privacy}}" target="_blank" rel="noopener">Datenschutzerklärung: Muster Schulen</a></li>
 					<li><a href="{{theme.documents.specificFiles.termsOfUse}}" target="_blank" rel="noopener">Nutzungsordnung</a></li>
 					<li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
 				</ul>
