--- a/theme/brb/views/lib/footer.hbs
+++ b/theme/brb/views/lib/footer.hbs
@@ -9,7 +9,7 @@
 				<span> - </span>
 				<a href="/datenschutz">Datenschutzerklärung: HPI</a>
 				<span> - </span>
-				<a href="{{theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung: Schulen</a>
+				<a href="{{theme.documents.specificFiles.privacyExemplary}}" target="_blank" rel="noopener">Datenschutzerklärung: Muster Schulen</a>
 				<span> - </span>
 				<a href="{{theme.documents.specificFiles.termsOfUseExemplary}}" target="_blank" rel="noopener">Nutzungsordnung</a>
 				<span> - </span>
